Improve code block layout lightly - avoid spurious scrollbars

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -174,7 +174,7 @@ code {
 }
 
 pre {
-  padding: 8px 12px;
+  padding: 8px 10px;
   overflow-x: auto;
 
   > code {
